[BugFix] Fix compile warnings (#61328)
Signed-off-by: Binglin Chang <decstery@gmail.com>